force-app/main/default/objects/Change_Request__c/Change_Request__c.object-meta.xml
<CustomObject>
    <description>This object is mainly used to change any existing data from account/SAP.</description>
    <label>Change Request</label>
    <nameField>
        <displayFormat>CR-{000000}</displayFormat>
        <label>Change Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Change Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>