force-app/main/default/objects/Change_Request__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <label>Account Name</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>SAP Value does not exist to create a new request.</errorMessage>
        <filterItems>
            <field>Account.SAP_Account_ID__c</field>
            <operation>notEqual</operation>
            <value/>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Change Basic Account Information</relationshipLabel>
    <relationshipName>ChangeRequests</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>