force-app/main/default/objects/Change_Request__c/fields/Account_SAP_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_SAP_ID__c</fullName>
    <formula>Account_Name__r.SAP_Account_ID__c</formula>
    <label>Account SAP ID</label>
    <type>Text</type>
</CustomField>