force-app/main/default/objects/Change_Request__c/fields/Account_SFDC_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_SFDC_ID__c</fullName>
    <formula>Account_Name__r.Id</formula>
    <label>Account SFDC ID</label>
    <type>Text</type>
</CustomField>