force-app/main/default/objects/Change_Request__c/fields/Account_Status__c.field-meta.xml
<CustomField>
    <fullName>Account_Status__c</fullName>
    <formula>TEXT(Account_Name__r.Account_Status__c)</formula>
    <label>Account Status</label>
    <type>Text</type>
</CustomField>