force-app/main/default/objects/Change_Request__c/fields/AccountName__c.field-meta.xml
<CustomField>
    <fullName>AccountName__c</fullName>
    <formula>Account_Name__r.Name</formula>
    <label>AccountName</label>
    <type>Text</type>
</CustomField>