force-app/main/default/objects/Change_Request__c/fields/Approval_Comment_Check__c.field-meta.xml
<CustomField>
    <fullName>Approval_Comment_Check__c</fullName>
    <description>Indicates to the system if an approval comment check is required.</description>
    <inlineHelpText>Indicates to the system if an approval comment check is required.</inlineHelpText>
    <label>Approval Comment Check</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Required</fullName>
            </value>
            <value>
                <fullName>Requested</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>