force-app/main/default/objects/Change_Request__c/fields/Approver_Name__c.field-meta.xml
<CustomField>
    <fullName>Approver_Name__c</fullName>
    <defaultValue>$User.Manager__c</defaultValue>
    <label>Approver Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>