force-app/main/default/objects/Change_Request__c/fields/Auto_Approve__c.field-meta.xml
<CustomField>
    <fullName>Auto_Approve__c</fullName>
    <defaultValue>false</defaultValue>
    <description>KEEP HIDDEN: Used by workflow to automatically approve a change request when assigning a parents Tier to a child for reporting and auditing purposes.</description>
    <label>Auto Approve</label>
    <type>Checkbox</type>
</CustomField>