force-app/main/default/objects/Change_Request__c/fields/Billing_Block_Reason__c.field-meta.xml
<CustomField>
    <fullName>Billing_Block_Reason__c</fullName>
    <description>01	Calculation Missing
02	Compl Confirm Missng
03	Prices Incomplete
04	Check Terms of Paymt
05	Check Terms of Div
08	Check Credit Memo
09	Check Debit Memo
30	Price Chg. Approval</description>
    <formula>TEXT(Account_Name__r.Billing_Block_Reason__c)</formula>
    <inlineHelpText>01	Calculation Missing
02	Compl Confirm Missng
03	Prices Incomplete
04	Check Terms of Paymt
05	Check Terms of Div
08	Check Credit Memo
09	Check Debit Memo
30	Price Chg. Approval</inlineHelpText>
    <label>Billing Block Reason</label>
    <type>Text</type>
</CustomField>