force-app/main/default/objects/Change_Request__c/fields/Business_Sector__c.field-meta.xml
<CustomField>
    <fullName>Business_Sector__c</fullName>
    <formula>Account_Name__r.Business_Sector__r.Name</formula>
    <label>Business Sector</label>
    <type>Text</type>
</CustomField>