force-app/main/default/objects/Change_Request__c/fields/Change_Request_Approver__c.field-meta.xml
<CustomField>
    <fullName>Change_Request_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Change Request Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Change_Requests_Approver</relationshipName>
    <type>Lookup</type>
</CustomField>