force-app/main/default/objects/Change_Request__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <formula>Account_Name__r.BillingCity</formula>
    <label>City</label>
    <type>Text</type>
</CustomField>