force-app/main/default/objects/Change_Request__c/fields/Compare_Acct_Owner_with_New_Acct_Owner__c.field-meta.xml
<CustomField>
    <fullName>Compare_Acct_Owner_with_New_Acct_Owner__c</fullName>
    <formula>IF(  Account_Name__r.Owner.Id  =  New_Account_Owner__r.Id , true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Compare Acct Owner with New Acct Owner</label>
    <type>Checkbox</type>
</CustomField>