force-app/main/default/objects/Change_Request__c/fields/Compare_Street_with_New__c.field-meta.xml
<CustomField>
    <fullName>Compare_Street_with_New__c</fullName>
    <formula>if( AccountName__c = New_Account_Name__c ,true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Compare Acct Name with New Acct Name</label>
    <type>Checkbox</type>
</CustomField>