force-app/main/default/objects/Change_Request__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <formula>Account_Name__r.BillingCountry</formula>
    <label>Country</label>
    <type>Text</type>
</CustomField>