force-app/main/default/objects/Change_Request__c/fields/Current_Request__c.field-meta.xml
<CustomField>
    <fullName>Current_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used for reporting to tell which change request is the most current.</description>
    <label>Current Request</label>
    <type>Checkbox</type>
</CustomField>