force-app/main/default/objects/Change_Request__c/fields/Current_Territory_ID__c.field-meta.xml
<CustomField>
    <fullName>Current_Territory_ID__c</fullName>
    <formula>Account_Name__r.Owner.Territory_ID__c</formula>
    <label>Current Territory ID</label>
    <type>Text</type>
</CustomField>