force-app/main/default/objects/Change_Request__c/fields/Customer_Group__c.field-meta.xml
<CustomField>
    <fullName>Customer_Group__c</fullName>
    <formula>TEXT(Account_Name__r.Customer_Group__c)</formula>
    <label>Customer Price Group</label>
    <type>Text</type>
</CustomField>