force-app/main/default/objects/Change_Request__c/fields/Customer_Price_Procedure__c.field-meta.xml
<CustomField>
    <fullName>Customer_Price_Procedure__c</fullName>
    <formula>TEXT(Account_Name__r.Customer_Pricing_Procedure__c)</formula>
    <label>Customer Price Procedure</label>
    <type>Text</type>
</CustomField>