force-app/main/default/objects/Change_Request__c/fields/Delivery_Block_Reason__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Block_Reason__c</fullName>
    <description>01	Credit limit
02	Political reasons
03	Bottleneck material
04	Export papers missing
05	Check free of ch.dlv
06	No printing
07	Change in quantity
08	Kanban Delivery
09	JIT delivery (PDS)
30	Price Chg. Appproval</description>
    <formula>TEXT(Account_Name__r.Delivery_Block_Reason__c)</formula>
    <inlineHelpText>01	Credit limit
02	Political reasons
03	Bottleneck material
04	Export papers missing
05	Check free of ch.dlv
06	No printing
07	Change in quantity
08	Kanban Delivery
09	JIT delivery (PDS)
30	Price Chg. Appproval</inlineHelpText>
    <label>Delivery Block Reason</label>
    <type>Text</type>
</CustomField>