force-app/main/default/objects/Change_Request__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <formula>Account_Name__r.Email_Address__c</formula>
    <label>Email</label>
    <type>Text</type>
</CustomField>