force-app/main/default/objects/Change_Request__c/fields/File_Admin_Comments__c.field-meta.xml
<CustomField>
    <fullName>File_Admin_Comments__c</fullName>
    <label>File Admin Comments</label>
    <type>TextArea</type>
</CustomField>