force-app/main/default/objects/Change_Request__c/fields/File_Admin_Status__c.field-meta.xml
<CustomField>
    <fullName>File_Admin_Status__c</fullName>
    <label>File Admin Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>