force-app/main/default/objects/Change_Request__c/fields/File_Net_Admin_Name__c.field-meta.xml
<CustomField>
    <fullName>File_Net_Admin_Name__c</fullName>
    <label>File Admin Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>