force-app/main/default/objects/Change_Request__c/fields/Industry_Segment__c.field-meta.xml
<CustomField>
    <fullName>Industry_Segment__c</fullName>
    <formula>Account_Name__r.Industry_Segment__r.Name</formula>
    <label>Industry Segment</label>
    <type>Text</type>
</CustomField>