force-app/main/default/objects/Change_Request__c/fields/NAICS_Code__c.field-meta.xml
<CustomField>
    <fullName>NAICS_Code__c</fullName>
    <formula>Account_Name__r.NAICS_Code__c</formula>
    <label>NAICS Code</label>
    <type>Text</type>
</CustomField>