force-app/main/default/objects/Change_Request__c/fields/New_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>New_Account_Name__c</fullName>
    <label>New Account Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>