force-app/main/default/objects/Change_Request__c/fields/New_Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>New_Account_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>New Account Owner</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Profile.Name</field>
            <operation>contains</operation>
            <value>Commercial, Chargeback, System Administrator, Standard User, Inside Sales, Standard Healthcare, Integration, Operations, KD, Order Management Profile</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Change_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>