force-app/main/default/objects/Change_Request__c/fields/New_Business_Sector__c.field-meta.xml
<CustomField>
    <fullName>New_Business_Sector__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>New Business Sector</label>
    <referenceTo>Business_Sector__c</referenceTo>
    <relationshipLabel>Change Requests</relationshipLabel>
    <relationshipName>Change_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>