force-app/main/default/objects/Change_Request__c/fields/New_City__c.field-meta.xml
<CustomField>
    <fullName>New_City__c</fullName>
    <label>New City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>