force-app/main/default/objects/Change_Request__c/fields/New_Country__c.field-meta.xml
<CustomField>
    <fullName>New_Country__c</fullName>
    <label>New Country</label>
    <length>3</length>
    <type>Text</type>
</CustomField>