force-app/main/default/objects/Change_Request__c/fields/New_Customer_Group__c.field-meta.xml
<CustomField>
    <fullName>New_Customer_Group__c</fullName>
    <label>New Customer Group</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>05	Builders</fullName>
            </value>
            <value>
                <fullName>01	Educational Services</fullName>
            </value>
            <value>
                <fullName>02	Govt &amp; Military</fullName>
            </value>
            <value>
                <fullName>03	Health Care &amp; Social</fullName>
            </value>
            <value>
                <fullName>07	Others</fullName>
            </value>
            <value>
                <fullName>04	Property Mgmt</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>