force-app/main/default/objects/Change_Request__c/fields/New_Customer_Price_Procedure__c.field-meta.xml
<CustomField>
    <fullName>New_Customer_Price_Procedure__c</fullName>
    <label>New Customer Price Procedure</label>
    <length>1</length>
    <type>Text</type>
</CustomField>