force-app/main/default/objects/Change_Request__c/fields/New_Email__c.field-meta.xml
<CustomField>
    <fullName>New_Email__c</fullName>
    <label>New Email</label>
    <length>241</length>
    <type>Text</type>
</CustomField>