force-app/main/default/objects/Change_Request__c/fields/New_Industry__c.field-meta.xml
<CustomField>
    <fullName>New_Industry__c</fullName>
    <label>New Industry</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Administrative and Support and Waste Management and Remediation Services</fullName>
            </value>
            <value>
                <fullName>Agriculture, Forestry, Fishing &amp; Hunting</fullName>
            </value>
            <value>
                <fullName>Arts, Entertainment, and Recreation</fullName>
            </value>
            <value>
                <fullName>Builders</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Government</fullName>
            </value>
            <value>
                <fullName>Healthcare &amp; Social Assistance</fullName>
            </value>
            <value>
                <fullName>Information</fullName>
            </value>
            <value>
                <fullName>Insurance Companies</fullName>
            </value>
            <value>
                <fullName>Lodging</fullName>
            </value>
            <value>
                <fullName>Management of Companies and Enterprises</fullName>
            </value>
            <value>
                <fullName>Manufacturing</fullName>
            </value>
            <value>
                <fullName>Military</fullName>
            </value>
            <value>
                <fullName>Mining, Quarrying, and Oil and Gas</fullName>
            </value>
            <value>
                <fullName>Other Services (except Public Administration)</fullName>
            </value>
            <value>
                <fullName>Professional, Scientific, and Technical Services</fullName>
            </value>
            <value>
                <fullName>Property Management</fullName>
            </value>
            <value>
                <fullName>Retail Trade</fullName>
            </value>
            <value>
                <fullName>Transportation and Warehousing</fullName>
            </value>
            <value>
                <fullName>Utilities</fullName>
            </value>
            <value>
                <fullName>Wholesale Trade</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>