force-app/main/default/objects/Change_Request__c/fields/New_Industry_Sector__c.field-meta.xml
<CustomField>
    <fullName>New_Industry_Sector__c</fullName>
    <label>New Industry Sector</label>
    <length>10</length>
    <type>Text</type>
</CustomField>