force-app/main/default/objects/Change_Request__c/fields/New_Industry_Segment__c.field-meta.xml
<CustomField>
    <fullName>New_Industry_Segment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>New Industry Segment</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Industry_Segment__c.Business_Sector__c</field>
            <operation>equals</operation>
            <valueField>$Source.New_Business_Sector__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Industry_Segment__c</referenceTo>
    <relationshipLabel>Change Requests</relationshipLabel>
    <relationshipName>Change_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>