force-app/main/default/objects/Change_Request__c/fields/New_Parent_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>New_Parent_Account_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>New Parent Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Change Parent Account</relationshipLabel>
    <relationshipName>ChangeRequests1</relationshipName>
    <type>Lookup</type>
</CustomField>