force-app/main/default/objects/Change_Request__c/fields/New_Payment_Term__c.field-meta.xml
<CustomField>
    <fullName>New_Payment_Term__c</fullName>
    <label>New Payment Term</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0002	14 days 2%, 30 net</fullName>
            </value>
            <value>
                <fullName>0001	Pay immediately w/o deduction</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>