force-app/main/default/objects/Change_Request__c/fields/New_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>New_Postal_Code__c</fullName>
    <label>New Postal Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>