force-app/main/default/objects/Change_Request__c/fields/New_Potential_Annual_Sales_Volume__c.field-meta.xml
<CustomField>
    <fullName>New_Potential_Annual_Sales_Volume__c</fullName>
    <description>A - &gt; $500,000
B - $250,000 - $499,999
C - $100,000 - $249,999 
D - $50,000 - $99,999
E - $20,000 - $49,999
F - &lt; $20,000</description>
    <inlineHelpText>A - &gt; $500,000
B - $250,000 - $499,999
C - $100,000 - $249,999 
D - $50,000 - $99,999
E - $20,000 - $49,999
F - &lt; $20,000</inlineHelpText>
    <label>New Potential Annual Sales Volume</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
            <value>
                <fullName>E</fullName>
            </value>
            <value>
                <fullName>F</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>