force-app/main/default/objects/Change_Request__c/fields/New_Price_List_Type__c.field-meta.xml
<CustomField>
    <fullName>New_Price_List_Type__c</fullName>
    <label>New Price List Type</label>
    <length>2</length>
    <type>Text</type>
</CustomField>