force-app/main/default/objects/Change_Request__c/fields/New_Pricing_Tier__c.field-meta.xml
<CustomField>
    <fullName>New_Pricing_Tier__c</fullName>
    <label>New Pricing Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bronze</fullName>
            </value>
            <value>
                <fullName>Silver</fullName>
            </value>
            <value>
                <fullName>Gold</fullName>
            </value>
            <value>
                <fullName>Platinum</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>