force-app/main/default/objects/Change_Request__c/fields/New_Region__c.field-meta.xml
<CustomField>
    <fullName>New_Region__c</fullName>
    <label>New State</label>
    <length>3</length>
    <type>Text</type>
</CustomField>