force-app/main/default/objects/Change_Request__c/fields/New_Street__c.field-meta.xml
<CustomField>
    <fullName>New_Street__c</fullName>
    <label>New Street</label>
    <length>60</length>
    <type>Text</type>
</CustomField>