force-app/main/default/objects/Change_Request__c/fields/New_Telephone__c.field-meta.xml
<CustomField>
    <fullName>New_Telephone__c</fullName>
    <label>New Telephone</label>
    <length>30</length>
    <type>Text</type>
</CustomField>