force-app/main/default/objects/Change_Request__c/fields/New_Territory_Id__c.field-meta.xml
<CustomField>
    <fullName>New_Territory_Id__c</fullName>
    <formula>New_Account_Owner__r.Territory_ID__c</formula>
    <label>New Territory Id</label>
    <type>Text</type>
</CustomField>