force-app/main/default/objects/Change_Request__c/fields/Old_Territory__c.field-meta.xml
<CustomField>
    <fullName>Old_Territory__c</fullName>
    <formula>Account_Name__r.Territory_ID__c</formula>
    <label>Old Territory</label>
    <type>Text</type>
</CustomField>