force-app/main/default/objects/Change_Request__c/fields/Open_Opportunity_Amount__c.field-meta.xml
<CustomField>
    <fullName>Open_Opportunity_Amount__c</fullName>
    <label>Open Opportunity Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>