force-app/main/default/objects/Change_Request__c/fields/Owner_Email__c.field-meta.xml
<CustomField>
    <fullName>Owner_Email__c</fullName>
    <formula>$User.Email</formula>
    <label>Owner Email</label>
    <type>Text</type>
</CustomField>