force-app/main/default/objects/Change_Request__c/fields/Owner_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Owner_First_Name__c</fullName>
    <formula>$User.FirstName</formula>
    <label>Owner First Name</label>
    <type>Text</type>
</CustomField>