force-app/main/default/objects/Change_Request__c/fields/Owner_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Owner_Last_Name__c</fullName>
    <formula>$User.LastName</formula>
    <label>Owner Last Name</label>
    <type>Text</type>
</CustomField>