force-app/main/default/objects/Change_Request__c/fields/OwnerID__c.field-meta.xml
<CustomField>
    <fullName>OwnerID__c</fullName>
    <label>OwnerID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>