force-app/main/default/objects/Change_Request__c/fields/Parent_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Parent_Account_Name__c</fullName>
    <formula>Account_Name__r.Name_2__c</formula>
    <label>Parent Account Name</label>
    <type>Text</type>
</CustomField>