force-app/main/default/objects/Change_Request__c/fields/Payment_Term__c.field-meta.xml
<CustomField>
    <fullName>Payment_Term__c</fullName>
    <formula>Account_Name__r.Payment_Term__c</formula>
    <label>Payment Term</label>
    <type>Text</type>
</CustomField>