force-app/main/default/objects/Change_Request__c/fields/Price_Group__c.field-meta.xml
<CustomField>
    <fullName>Price_Group__c</fullName>
    <formula>TEXT(Account_Name__r.Potential_Annual_Sales_Volume__c)</formula>
    <label>Potential Annual Sales Volume</label>
    <type>Text</type>
</CustomField>