force-app/main/default/objects/Change_Request__c/fields/Price_List_Type__c.field-meta.xml
<CustomField>
    <fullName>Price_List_Type__c</fullName>
    <formula>TEXT(Account_Name__r.Price_List_Type__c)</formula>
    <label>Price List Type</label>
    <type>Text</type>
</CustomField>