force-app/main/default/objects/Change_Request__c/fields/Pricing_Tier__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Tier__c</fullName>
    <formula>Account_Name__r.Pricing_Tier__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pricing Tier</label>
    <type>Text</type>
</CustomField>