force-app/main/default/objects/Change_Request__c/fields/Pricing_Tier_QTD_Sales__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Tier_QTD_Sales__c</fullName>
    <formula>Account_Name__r.Pricing_Tier_QTD_Sales__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pricing Tier QTD Sales</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>