force-app/main/default/objects/Change_Request__c/fields/Reason_for_Update__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Update__c</fullName>
    <label>Reason for Update</label>
    <type>TextArea</type>
</CustomField>