force-app/main/default/objects/Change_Request__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <formula>Account_Name__r.BillingState</formula>
    <label>State</label>
    <type>Text</type>
</CustomField>