force-app/main/default/objects/Change_Request__c/fields/Rejection_Comments__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Comments__c</fullName>
    <label>Rejection Comments</label>
    <length>254</length>
    <type>Text</type>
</CustomField>