force-app/main/default/objects/Change_Request__c/fields/Reporting_Group__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Group__c</fullName>
    <formula>TEXT(Account_Name__r.Reporting_Group__c)</formula>
    <label>Reporting Group</label>
    <type>Text</type>
</CustomField>