force-app/main/default/objects/Change_Request__c/fields/Street__c.field-meta.xml
<CustomField>
    <fullName>Street__c</fullName>
    <formula>Account_Name__r.BillingStreet</formula>
    <label>Street</label>
    <type>Text</type>
</CustomField>