force-app/main/default/objects/Change_Request__c/fields/Telephone__c.field-meta.xml
<CustomField>
    <fullName>Telephone__c</fullName>
    <formula>Account_Name__r.Phone</formula>
    <label>Telephone</label>
    <type>Text</type>
</CustomField>