force-app/main/default/objects/Change_Request__c/fields/Territory__c.field-meta.xml
<CustomField>
    <fullName>Territory__c</fullName>
    <formula>Account_Name__r.Owner.Territory_ID__c</formula>
    <label>Territory</label>
    <type>Text</type>
</CustomField>