force-app/main/default/objects/Change_Request__c/fields/Transaction_Block_Reason__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Block_Reason__c</fullName>
    <description>01	Not in SF
02	No activity &gt;2yrs
03	Credit issues
04	Duplicate Account
05	Out of Business
06	Expired Contract
07	Ineligible Reseller
08	See Account Notes</description>
    <formula>TEXT(Account_Name__r.Transaction_Block_Reason__c)</formula>
    <inlineHelpText>01	Not in SF
02	No activity &gt;2yrs
03	Credit issues
04	Duplicate Account
05	Out of Business
06	Expired Contract
07	Ineligible Reseller
08	See Account Notes</inlineHelpText>
    <label>Transaction Block Reason</label>
    <type>Text</type>
</CustomField>