force-app/main/default/objects/Change_Request__c/listViews/All_Change_Requests.listView-meta.xml
<ListView>
    <fullName>All_Change_Requests</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>AccountName__c</columns>
    <columns>Parent_Account_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Change Requests</label>
</ListView>